Final Components push

--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,12 @@
     <link rel="icon" type="image/png" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>zkpCards</title>
+    <style>
+      input::-webkit-outer-spin-button,
+      input::-webkit-inner-spin-button {
+         -webkit-appearance: none;
+      }
+   </style>
   </head>
   <body>
     <div id="root"></div>
